<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginStart="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginEnd="20dp"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/menu_dialog_about_textview"
        android:layout_width="@dimen/settings_dialog_width"
        android:layout_height="@dimen/settings_dialog_height"
        android:background="@drawable/settings_item_selector"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/settings_about"
        android:textSize="@dimen/settings_text_size"
        android:textColor="@android:color/black"
        android:drawableRight="@drawable/ic_help_outline_black_36dp"
        android:drawableEnd="@drawable/ic_help_outline_black_36dp"
        android:drawablePadding="16dp"
        android:contentDescription="@string/empty" />
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/holo_blue_light" />
    
    <TextView
        android:id="@+id/menu_dialog_themes_textview"
        android:layout_width="@dimen/settings_dialog_width"
        android:layout_height="@dimen/settings_dialog_height"
        android:background="@drawable/settings_item_selector"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/settings_themes"
        android:textSize="@dimen/settings_text_size"
        android:textColor="@android:color/black"
        android:drawableRight="@drawable/ic_color_lens_black_36dp"
        android:drawableEnd="@drawable/ic_color_lens_black_36dp"
        android:drawablePadding="16dp"
        android:contentDescription="@string/empty" />
</LinearLayout>
