<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/named_item_dialog_header_height"
        android:gravity="center"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingLeft="24dp"
        android:paddingStart="24dp"
        android:paddingRight="24dp"
        android:paddingEnd="24dp"
        android:text="@string/util_choose_resource_dialog_title"
        android:textSize="@dimen/named_item_dialog_title_text_size"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        style="@style/CheckOutTitleStyle" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
      	android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        android:baselineAligned="false" >
        
        <ImageButton
            android:id="@+id/choose_resource_dialog_web_imagebutton"
            android:layout_width="0dp"
            android:layout_height="@dimen/choose_resource_dialog_imagebutton_size"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:src="@drawable/ic_public_black_48dp"
            android:contentDescription="@string/empty" />
        
        <Space
	        android:layout_width="8dp"
	        android:layout_height="1dp" />
        	    
        <ImageButton
            android:id="@+id/choose_resource_dialog_file_imagebutton"
            android:layout_width="0dp"
            android:layout_height="@dimen/choose_resource_dialog_imagebutton_size"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:src="@drawable/ic_folder_open_black_48dp"
            android:contentDescription="@string/empty" />
             
        <Space
	        android:layout_width="8dp"
	        android:layout_height="1dp" />
        
        <ImageButton
            android:id="@+id/choose_resource_dialog_map_imagebutton"
            android:layout_width="0dp"
            android:layout_height="@dimen/choose_resource_dialog_imagebutton_size"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:src="@drawable/ic_map_black_48dp"
            android:contentDescription="@string/empty" />
    </LinearLayout>
    
    <EditText
        android:id="@+id/choose_resource_dialog_resource_url_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:hint="@string/util_resource_url"
        android:inputType="textUri"
        android:textSize="@dimen/named_item_dialog_text_size" />
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal" >
        
        <Button
            android:id="@+id/choose_resource_dialog_OK_button"
            android:layout_width="@dimen/named_item_dialog_util_button_width"
            android:layout_height="@dimen/named_item_dialog_util_button_height"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/util_OK_button_text"
            android:textAllCaps="true"
            android:textColor="@drawable/material_flat_button_selector_blue"
            android:textSize="@dimen/named_item_dialog_util_button_text_size"
            android:textStyle="bold" />
        
        <Space
            android:id="@+id/space_between_buttons"
            android:layout_width="8dp"
            android:layout_height="1dp"
            android:layout_toLeftOf="@id/choose_resource_dialog_OK_button"
            android:layout_toStartOf="@id/choose_resource_dialog_OK_button" />
        
        <Button
            android:id="@+id/choose_resource_dialog_CANCEL_button"
            android:layout_width="@dimen/named_item_dialog_util_button_width"
            android:layout_height="@dimen/named_item_dialog_util_button_height"
            android:layout_toLeftOf="@id/space_between_buttons"
            android:layout_toStartOf="@id/space_between_buttons"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/util_CANCEL_button_text"
            android:textAllCaps="true"
            android:textColor="@drawable/material_flat_button_selector_blue"
            android:textSize="@dimen/named_item_dialog_util_button_text_size"
            android:textStyle="bold" />
    </RelativeLayout>
</LinearLayout>
